RESOLVED FIXED281886
Raise exception when a webpushd connection error occurs
https://bugs.webkit.org/show_bug.cgi?id=281886
Summary Raise exception when a webpushd connection error occurs
Ben Nham
Reported 2024-10-21 16:17:31 PDT
When the connection to webpushd fails, we currently return a default-constructed response object. This often makes sense as a default, but in some cases (e.g. SubscribeToPushService), it does not. In that case it is causing us to return a PushSubscription object with an empty endpoint, which doesn't make sense to the client.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-21 16:21:07 PDT
Ben Nham
Comment 2 2024-10-21 16:22:37 PDT
EWS
Comment 3 2024-10-23 10:19:44 PDT
Committed 285610@main (a427fa53db75): <https://commits.webkit.org/285610@main> Reviewed commits have been landed. Closing PR #35553 and removing active labels.
EWS
Comment 4 2024-11-21 11:48:54 PST
Committed 283286.520@safari-7620-branch (cb547545007c): <https://commits.webkit.org/283286.520@safari-7620-branch> Reviewed commits have been landed. Closing PR #2313 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.